--- a/Textilee/styles/partials/_responsive.scss
+++ b/Textilee/styles/partials/_responsive.scss
@@ -8,14 +8,62 @@
         font-size: 4.8rem;
     }
     .navContainer {
-        i {
-            display: block;
-            color: $primeryFontColor;
-            visibility: visible;
-        } 
         .mainNav ul li {
             display: none;
         }
+    }
+    // Mobile menu
+    ul.nav {
+        background: $primeryFontColor;
+        position: fixed;
+        z-index: 10;
+        width: 170px;
+        right: -170px;    
+        top: 8%;
+        height: 30%;
+        transition: all 0.5s;
+    }
+    ul.nav a {
+        display: inline-block;
+        font-family: $secondaryFont;
+        font-size: 2.5rem;
+        color: $secondaryFontColor;
+        text-transform: uppercase;
+        text-decoration: none;
+        width: 100%;
+        padding: 10px;
+        transition: all 0.3s;
+    }
+    ul.nav a:hover,
+    ul.nav a:focus {
+        background: #3498db;
+    }
+    input[type="checkbox"]:checked + ul.nav {
+        right: 0;
+    }
+    input[type="checkbox"] {
+        display: none;  
+    }
+    label[for="toggleMenu"] {
+        position: fixed;
+        top: 10px;
+        left: 80%;
+        color: black;
+        z-index: 10;
+    }
+    .mobileNav i {
+        font-size: 5rem;
+    }
+    // End of mobile menu
+}
+
+@media (max-width: 530px) {
+    header {
+        background-position: 50% 100%;
+        min-height: 70vh;
+    }
+    .headline {
+        font-size: 3.8rem;
     }
 }
 
@@ -25,7 +73,19 @@
         min-height: 55vh;
     }
     .headline {
-        font-size: 3.2rem;
+        font-size: 2.8rem;
+    }
+}
+
+@media (max-width: 380px) {
+    .headline {
+        font-size: 2.5rem;
+    }
+}
+
+@media (max-width: 320px) {
+    .headline {
+        font-size: 2.2rem;
     }
 }
 // Header Page Responsive Ends Here
@@ -423,113 +483,6 @@
     .contactHeader {
         min-height: 60vh;
     }
-    // .navContainer i {
-    //     display: block;
-    //     color: $primeryFontColor;
-    //     visibility: visible;
-    // }
-
-    // 
-    .checkbox-container {
-        display: block;
-        position: relative;
-        float: right;
-        width: 50px;
-        height: 50px;
-        margin-top: 8px;
-        margin-bottom: -3px;
-        z-index: 1;
-    }
-
-    .menu-content {
-        display: flex;
-        background: rgba(39, 125, 236, 0.9);
-        font-weight: bold;
-        text-transform: uppercase;
-        color: $secondaryFontColor;
-        float: right;
-        margin-top: -56px;
-    }
-
-    .menu-content ul {
-        display: block;
-        margin: 0;
-        margin-top: 10px;
-        width: 0;
-        height: 0;
-        overflow: hidden;
-        transition: height 0.3s ease 0.7s, width 0.7s ease;
-    }
-
-    .menu-content ul li {
-        list-style: none;
-        padding: 0.6em 0.5em;
-        transition: all 0.5s ease;
-        transition: color 0.5s, background 0.5s;
-    }
-
-    .checkbox-trigger {
-        opacity: 1;
-        position: absolute;
-        margin-top: -65px;
-        width: 50px;
-        height: 50px;
-        right: 0;
-        z-index: 1;
-    }
-
-    .hamburger-menu, .hamburger-menu::before, .hamburger-menu::after {
-        display: block;
-        position: absolute;
-        background: $secondaryFontColor;
-        width: 40px;
-        height: 4px;
-        margin: 1.3em 3em;
-        transition: background 0.3s;
-    }
-
-    .hamburger-menu::before, .hamburger-menu::after {
-    content: '';
-        position: absolute;
-        margin: -0.7em 0 0;
-        transition: width 0.7s ease 0.3s; 
-        transform: 0.7s ease 0.3s;
-    }
-
-    .hamburger-menu::after { margin-top: 0.7em; }
-
-    .hamburger-menu {
-        position: relative;
-        display: block;
-        margin: 1.45em 0.35em;
-        transition: width 0.3s ease;
-    }
-
-    .checkbox-trigger:checked { right: 202px; }
-
-    .checkbox-trigger:checked + .menu-content .hamburger-menu {
-        width: 2em;
-        transition: width 0.7s ease 0.7s;
-    }
-
-    .checkbox-trigger:checked + .menu-content .hamburger-menu::before {
-        width: 1.2em;
-        transform: rotate(-35deg);
-        margin-top: -0.4em;
-    }
-
-    .checkbox-trigger:checked + .menu-content .hamburger-menu::after {
-        width: 1.2em;
-        transform: rotate(35deg);
-        margin-top: 0.4em;
-    }
-
-    .checkbox-trigger:checked + .menu-content ul {
-        width: 200px;
-        height: 200px;
-        transition: width 0.7s ease 0.3s, height 0.3s ease;
-    }
-    // 
     .mainNav ul {
         display: none;
     }
